# termstack

./: CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  install-deps.sh  simg_test.sh  test_resize_fix.sh  test_xeyes_resize.sh
.cargo/: config.toml
assets/: generate-icons.sh  termstack-icon-128.raw  termstack-icon-256.raw  termstack-icon-48.raw  termstack-icon-64.raw
column-compositor/: CLAUDE.md  Cargo.toml
column-compositor/crates/column-term/: Cargo.toml
column-compositor/crates/column-term/src/: main.rs
column-compositor/crates/compositor/: Cargo.toml
column-compositor/crates/compositor/src/: config.rs  coords.rs  input.rs  ipc.rs  ipc_test.rs  layout.rs  lib.rs  main.rs  state.rs  terminal_manager.rs
column-compositor/crates/compositor/src/terminal_manager/: tests.rs
column-compositor/crates/terminal/: Cargo.toml
column-compositor/crates/terminal/src/: pty.rs  render.rs  sizing.rs  state.rs
column-compositor/crates/test-harness/: Cargo.toml
column-compositor/crates/test-harness/src/: assertions.rs  fixtures.rs  headless.rs  lib.rs
column-compositor/crates/test-harness/tests/: input_events.rs  layout_properties.rs  live_client.rs  regression.rs  scrolling.rs  terminal_state.rs  window_growth.rs  window_positioning.rs
column-compositor/tests/integration/: mod.rs  regression.rs  scrolling.rs  window_growth.rs  window_positioning.rs
column-compositor/tests/properties/: layout_properties.rs  mod.rs
crates/column-term/src/: config_test.rs  main.rs
crates/compositor/: Cargo.toml
crates/compositor/src/: compositor_actions.rs  compositor_main.rs  config.rs  coords.rs  cursor.rs  frame.rs  icon.rs  input.rs  input_handler.rs  ipc.rs  ipc_test.rs  layout.rs  lib.rs  main.rs  mouse_actions.rs  render.rs  selection.rs  setup.rs  spawn_handler.rs  state.rs  terminal_keys.rs  terminal_output.rs  title_bar.rs  window_height.rs  window_lifecycle.rs  winit_backend.rs  xwayland.rs  xwayland_lifecycle.rs
crates/compositor/src/backend/: headless.rs  mod.rs  x11.rs
crates/compositor/src/state/: core.rs  external.rs  focus.rs  initial_size_test.rs  mod.rs  resize.rs
crates/compositor/src/terminal_manager/: mod.rs  tests.rs
crates/terminal/src/: lib.rs  pty.rs  render.rs  sizing.rs  state.rs
crates/termstack/: Cargo.toml
crates/termstack/src/: cli.rs  cli_test.rs  config_test.rs  desktop.rs  main.rs  shell.rs  util.rs
crates/test-harness/: Cargo.toml
crates/test-harness/src/: e2e.rs  fixtures.rs  headless.rs  lib.rs  live.rs
crates/test-harness/tests/: boundary_cases.rs  coordinate_accuracy.rs  e2e_headless.rs  external_apps.rs  gui_x11.rs  initial_window_size.rs  input_events.rs  live_client.rs  popup_behavior.rs  regression.rs  state_properties.rs  terminal_state.rs  window_growth.rs  window_positioning.rs  x11_integration.rs  x11_resize.rs
crates/test-wayland-client/: Cargo.toml
crates/test-wayland-client/src/: main.rs
docs/: architecture.md  glossary.md  x11-integration.md  xwayland.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config.rs  fuzz_ipc.rs
scripts/: integration.fish  integration.zsh
specs/: column-layout.md  glossary.md  gui-window-routing.md  index.md  keyboard-shortcuts.md  output-terminals.md  selection-clipboard.md  shell-integration.md  terminal-sizing.md  window-resize.md
