[package]
name = "compositor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
default-run = "column-compositor"

[lib]
name = "compositor"
path = "src/lib.rs"

[[bin]]
name = "column-compositor"
path = "src/main.rs"

[dependencies]
smithay.workspace = true
smithay-drm-extras.workspace = true
calloop.workspace = true
calloop-wayland-source.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
rustix.workspace = true
fontdue.workspace = true
arboard.workspace = true
# Only used for cursor management (loading X11 cursor themes for compositor window)
# NOT used for X11 window management (xwayland-satellite handles that)
x11rb.workspace = true

terminal = { path = "../terminal" }

[dev-dependencies]
proptest.workspace = true
test-harness = { path = "../test-harness" }
