[package]
name = "compositor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "compositor"
path = "src/lib.rs"

[features]
default = ["x11-backend"]
x11-backend = []
headless-backend = ["softbuffer"]

[dependencies]
# Cross-platform dependencies
smithay.workspace = true
calloop.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
rustix.workspace = true
fontdue.workspace = true
softbuffer = { version = "0.4", optional = true }

terminal = { path = "../terminal" }

# Linux-only dependencies (Smithay backends, GPU rendering, clipboard, etc.)
[target.'cfg(target_os = "linux")'.dependencies]
smithay = { workspace = true, features = [
    "backend_drm", "backend_libinput", "backend_udev",
    "backend_winit", "backend_x11", "backend_gbm",
    "backend_egl", "backend_session_libseat",
    "renderer_gl", "xwayland",
] }
smithay-drm-extras = "0.1"
calloop-wayland-source = "0.3"
x11rb = { version = "0.13", features = ["cursor", "resource_manager"] }
arboard = "3.4"

[dev-dependencies]
proptest.workspace = true
test-harness = { path = "../test-harness" }
