[package]
name = "termstack"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI tool to spawn terminals in TermStack"

[[bin]]
name = "termstack"
path = "src/main.rs"

[dependencies]
compositor = { path = "../compositor" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
