[package]
name = "test-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
smithay.workspace = true
calloop.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
compositor = { path = "../compositor" }
rustix.workspace = true

[features]
gui-tests = []
headless-backend = ["compositor/headless-backend"]

[dev-dependencies]
proptest.workspace = true
terminal = { path = "../terminal" }
rustix.workspace = true
