[package]
name = "test-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
calloop.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
compositor = { path = "../compositor" }
rustix.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
smithay.workspace = true

[features]
gui-tests = []
headless-backend = ["compositor/headless-backend"]

[dev-dependencies]
proptest.workspace = true
terminal = { path = "../terminal" }
rustix.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
