[package]
name = "test-wayland-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "test-wayland-client"
path = "src/main.rs"

[dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
tempfile = "3"
