[package]
name = "column-term"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI tool to spawn terminals in column-compositor"

[[bin]]
name = "column-term"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
