[package]
name = "compositor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "compositor"
path = "src/lib.rs"

[[bin]]
name = "column-compositor"
path = "src/main.rs"

[dependencies]
smithay.workspace = true
smithay-drm-extras.workspace = true
calloop.workspace = true
calloop-wayland-source.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
toml.workspace = true
serde.workspace = true

terminal = { path = "../terminal" }

[dev-dependencies]
proptest.workspace = true
test-harness = { path = "../test-harness" }
