[package]
name = "terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
alacritty_terminal.workspace = true
rustix.workspace = true
fontdue.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
libc.workspace = true

[dev-dependencies]
proptest.workspace = true
